cmake_minimum_required(VERSION 3.21)
project(Algorithms_ACWing)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("${PROJECT_SOURCE_DIR}/aw785_quicksort" "${PROJECT_SOURCE_DIR}/aw785_quicksort/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw786_quicksortfindk" "${PROJECT_SOURCE_DIR}/aw786_quicksortfindk/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw787_mergesort" "${PROJECT_SOURCE_DIR}/aw787_mergesort/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw788_inversepair" "${PROJECT_SOURCE_DIR}/aw788_inversepair/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw789_bs_range" "${PROJECT_SOURCE_DIR}/aw789_bs_range/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw790_bs_root_cubed" "${PROJECT_SOURCE_DIR}/aw790_bs_root_cubed/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1097_flood_fill_lakes" "${PROJECT_SOURCE_DIR}/aw1097_flood_fill_lakes/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1098_castle_rooms" "${PROJECT_SOURCE_DIR}/aw1098_castle_rooms/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1106_peak_bfs" "${PROJECT_SOURCE_DIR}/aw1106_peak_bfs/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1076_bfs_maze" "${PROJECT_SOURCE_DIR}/aw1076_bfs_maze/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw188_bfs_knight" "${PROJECT_SOURCE_DIR}/aw188_bfs_knight/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1100_bfs_cow" "${PROJECT_SOURCE_DIR}/aw1100_bfs_cow/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw173_grid_dist" "${PROJECT_SOURCE_DIR}/aw173_grid_dist/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw1107_bfs_rubik" "${PROJECT_SOURCE_DIR}/aw1107_bfs_rubik/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw791_high_precision_addition" "${PROJECT_SOURCE_DIR}/aw791_high_precision_addition/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw792_high_precision_subtraction" "${PROJECT_SOURCE_DIR}/aw792_high_precision_subtraction/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw793_high_precision_multiplication" "${PROJECT_SOURCE_DIR}/aw793_high_precision_multiplication/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw794_high_precision_division" "${PROJECT_SOURCE_DIR}/aw794_high_precision_division/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw795_prefix_sum" "${PROJECT_SOURCE_DIR}/aw795_prefix_sum/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw796_prefix_sum_grid" "${PROJECT_SOURCE_DIR}/aw796_prefix_sum_grid/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw797_difference_array" "${PROJECT_SOURCE_DIR}/aw797_difference_array/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw798_difference_grid" "${PROJECT_SOURCE_DIR}/aw798_difference_grid/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw799_non_repeat_array" "${PROJECT_SOURCE_DIR}/aw799_non_repeat_array/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw800_array_target_sum" "${PROJECT_SOURCE_DIR}/aw800_array_target_sum/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw2818_subarray_two_pointers" "${PROJECT_SOURCE_DIR}/aw2818_subarray_two_pointers/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw801_Binary_find_ones" "${PROJECT_SOURCE_DIR}/aw801_Binary_find_ones/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw801_Binary_find_ones_brute" "${PROJECT_SOURCE_DIR}/aw801_Binary_find_ones_brute/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw802_Decrete_sum_range" "${PROJECT_SOURCE_DIR}/aw802_Decrete_sum_range/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw803_Merge_Intervals" "${PROJECT_SOURCE_DIR}/aw803_Merge_Intervals/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw826_Single_Linked_List" "${PROJECT_SOURCE_DIR}/aw826_Single_Linked_List/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw827_Doubly_Linked_List" "${PROJECT_SOURCE_DIR}/aw827_Doubly_Linked_List/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw828_Stack_With_Array" "${PROJECT_SOURCE_DIR}/aw828_Stack_With_Array/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw3302_Expression_order" "${PROJECT_SOURCE_DIR}/aw3302_Expression_order/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw829_Queue_With_Array" "${PROJECT_SOURCE_DIR}/aw829_Queue_With_Array/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/aw830_Ascending_Stack" "${PROJECT_SOURCE_DIR}/aw830_Ascending_Stack/output" )
add_subdirectory("${PROJECT_SOURCE_DIR}/lc51_backtrack_queens" "${PROJECT_SOURCE_DIR}/lc51_backtrack_queens/output" )
